Css cleaning, correct modal wrapping, starting working on projet

--- a/src/styles/NavSection.css
+++ b/src/styles/NavSection.css
@@ -79,35 +79,6 @@
   width: 120px;
 }
 
-.nav-option-wheel {
-  position: fixed;
-  top: 25px;
-  right: 25px;
-  width: 50px;
-  height: 50px;
-  background: #ffffff;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 2;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  cursor: pointer;
-  transition: background 0.3s;
-  border: none;
-}
-
-.nav-option-wheel:hover .nav-option-wheel-icon {
-  transform: rotate(90deg);
-}
-
-.nav-option-wheel-icon {
-  width: 40px;
-  height: 40px;
-  color: rgb(0, 0, 0);
-  transition: transform 0.3s ease;
-}
-
 /* Burger icon styles */
 .burger-icon {
   position: fixed;
