--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,20 +1,21 @@
-/* Modal overlay */
 .modal-overlay {
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   z-index: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-overlay.grey {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* Modal styles */
 .modal-template {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: white;
   padding: 25px;
   padding-top: 5px;
